<resources>
    <string name="app_name">AppInmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmueble">Sus Inmuebles</string>
    <string name="menu_contrato">Sus Contratos</string>
    <string name="menu_logout">Cerrar sesion</string>

    <string name="habilitados">Habilitados</string>
    <string name="deshabilitados">Deshabilitados</string>

    <string-array name="tipoInmueble">
        <item>Tipo de inmueble</item>
        <item>Edificio</item>
        <item>Fabrica</item>
        <item>Casa</item>
        <item>Lote</item>
        <item>Arbol</item>
    </string-array>

    <string-array name="usoInmueble">
        <item>Uso del inmueble</item>
        <item>Comercial</item>
        <item>Hogareño</item>
        <item>Alquiler</item>
    </string-array>

</resources>