<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_inmueble" />

        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/ic_baseline_assignment_turned_in_24"
            android:title="@string/menu_contrato" />

        <item android:title="Opciones">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="Salir" />
            </menu>
        </item>

    </group>

</menu>